<resources>
    <string name="app_name">Mobile_Dev_Assignment1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Monthly EMI Calculator</string>
    <string name="second_fragment_label">Total</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="emi_explanation">This app will assist in calculating your monthly EMI (Equated Monthly Installment.
    The Mortgage Principle Amount is the purchase price minus down payment.
    Interest rate is your fixed mortgage rate. The loan tenure in months is how many months it will take to repay the mortgage in full.
    The EMI reduces based on the longer your loan tenure is. </string>

    <string name="first_number">Principal Loan Amount ($)</string>
    <string name="second_number">Interest Rate (%)</string>
    <string name="calculate">Calculate</string>
    <string name="amortization_period">Loan Tenure (Months)</string>
    <string name="payment_frequency_monthly">Payment Frequency = Monthly</string>
    <string name="total_amount">0</string>
    <string name="total_emi">Your total EMI is:</string>
    <string name="back">Back</string>
</resources>